--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   webgitlab:
     image: 'gitlab/gitlab-ce:latest'
     restart: always
-    hostname: 'gitlab.miriamgs.com'
+    hostname: '10.250.10.2'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://gitlab.miriamgs.com:8929'
+        external_url 'https://10.250.10.2:8929'
         #Add any other gitlab.rb configuration here, each on its own line
         gitlab_rails['gitlab_shell_ssh_port'] = 2224
 
